Add statistics pre aggregation and lot of cleaning