@@ -1,6 +1,5 @@
 package io.vertigo.chatbot.commons.influxDb;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.TimeUnit;
@@ -13,7 +12,6 @@ import com.influxdb.client.InfluxDBClientFactory;
 import com.influxdb.client.InfluxDBClientOptions;
 
 import io.vertigo.chatbot.designer.analytics.utils.AnalyticsServicesUtils;
-import io.vertigo.chatbot.designer.analytics.utils.DataRequestBuilder;
 import io.vertigo.chatbot.designer.analytics.utils.InfluxRequestBuilder;
 import io.vertigo.chatbot.designer.analytics.utils.InfluxRequestUtil;
 import io.vertigo.chatbot.designer.domain.analytics.ConversationCriteria;
@@ -71,37 +69,29 @@ public class TimeSerieServices implements Component, Activeable {
 	}
 
 	/**
-	 * Get all the sessions of users
-	 *
-	 * @param criteria statcriteria
-	 * @return sum of sessions
-	 */
-	public TimedDatas getSessionsStats(final StatCriteria criteria) {
-		return InfluxRequestUtil.getTimeSeries(influxDBClient, influxDbName,
-				Arrays.asList(DataRequestBuilder.ofTag("isSessionStart", "count").build()),
-				AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.MESSAGES_MSRMT)
-						.addFilter("isSessionStart", "1")
-						.addFilter("_field", "name")
-						.build(),
-				AnalyticsServicesUtils.getTimeFilter(criteria));
-	}
-
-	/**
 	 * get all nlu messages and fallback messages
 	 *
 	 * @param criteria statcriteria
 	 * @return timeDatas with messages sum and fallbacksum
 	 */
 	public TimedDatas getRequestStats(final StatCriteria criteria) {
-		return InfluxRequestUtil.getTimeSeries(influxDBClient, influxDbName,
-				Arrays.asList(
-						DataRequestBuilder.ofTag("isFallback", "count").addFilter("==", "1").build(),
-						DataRequestBuilder.ofTag("isNlu", "count").addFilter("==", "1").build()),
-				AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.MESSAGES_MSRMT)
-						.addFilter("isUserMessage", "1")
-						.addFilter("_field", "name")
-						.build(),
-				AnalyticsServicesUtils.getTimeFilter(criteria));
+		final var timeFilter = AnalyticsServicesUtils.getTimeFilter(criteria);
+		final var columnCriteria = AnalyticsServicesUtils.getBotNodFilter(criteria);
+
+		final var q = new InfluxRequestBuilder(influxDbName)
+				.range(timeFilter)
+				.filterFields(AnalyticsServicesUtils.MESSAGES_STAT_MSRMT, List.of("isSessionStart:count", "isFallback:count", "isNlu:count", "userAction:count"))
+				.filterByColumn(columnCriteria);
+		if (criteria.getNodId() == null) {
+			q.append("|> drop(columns: [\"nodId\"])");
+		}
+		q.append("|> window(every: " + timeFilter.getDim() + ", createEmpty:true )")
+				.append("|> sum()")
+				.append("|> rename(columns: {_start: \"_time\"})")
+				.append("|> drop(columns: [\"_stop\"])")
+				.pivot();
+
+		return InfluxRequestUtil.executeTimedQuery(influxDBClient, q.build(false));
 	}
 
 	public TimedDatas getUserInteractions(final StatCriteria criteria) {
@@ -150,23 +140,6 @@ public class TimeSerieServices implements Component, Activeable {
 	}
 
 	/**
-	 * Get all sessions for export
-	 *
-	 * @param criteria statscriteria
-	 * @return all the messages unrecognized
-	 */
-	public TimedDatas getSessionsExport(final StatCriteria criteria) {
-		return InfluxRequestUtil.getTimeSeries(influxDBClient, influxDbName,
-				Arrays.asList(
-						DataRequestBuilder.ofTag("name", "count").build(),
-						DataRequestBuilder.ofTag("isSessionStart", "count").addFilter("==", "1").build()),
-				AnalyticsServicesUtils.getDataFilter(criteria, AnalyticsServicesUtils.MESSAGES_MSRMT)
-						.addFilter("_field", "name")
-						.build(),
-				AnalyticsServicesUtils.getTimeFilter(criteria));
-	}
-
-	/**
 	 * Get all messages unrecognized for export
 	 *
 	 * @param criteria statscriteria
@@ -194,17 +167,20 @@ public class TimeSerieServices implements Component, Activeable {
 	 * @return all topIntents
 	 */
 	public TabularDatas getAllTopIntents(final StatCriteria criteria) {
-		final String q = new InfluxRequestBuilder(influxDbName)
-				.range(AnalyticsServicesUtils.getTimeFilter(criteria))
-				.filterFields(AnalyticsServicesUtils.MESSAGES_MSRMT, List.of("name"))
-				.filterByColumn(AnalyticsServicesUtils.getBotNodFilter(criteria))
-				.filterByColumn(Map.of("isTechnical", "\"0\""))
-				.keep(List.of("name"))
-				.append("|> duplicate(column: \"name\", as: \"name:count\")")
-				.append("|> count(column: \"name:count\")")
-				.build(false);
+		final var timeFilter = AnalyticsServicesUtils.getTimeFilter(criteria);
 
-		return InfluxRequestUtil.executeTabularQuery(influxDBClient, q);
+		final var q = new InfluxRequestBuilder(influxDbName)
+				.range(timeFilter)
+				.filterFields(AnalyticsServicesUtils.MESSAGES_STAT_MSRMT, List.of("name:count"))
+				.filterByColumn(AnalyticsServicesUtils.getBotNodFilter(criteria));
+		if (criteria.getNodId() == null) {
+			q.append("|> drop(columns: [\"nodId\"])");
+		}
+		q.append("|> sum()")
+				.append("|> rename(columns: {_value: \"name:count\"})")
+				.append("|> keep(columns: [\"name\", \"name:count\"])");
+
+		return InfluxRequestUtil.executeTabularQuery(influxDBClient, q.build(false));
 	}
 
 	/**
@@ -230,14 +206,11 @@ public class TimeSerieServices implements Component, Activeable {
 	}
 
 	public TimedDatas getConversationDetails(final StatCriteria criteria, final String sessionId) {
-		final Map<String, String> filterByColumnMap = AnalyticsServicesUtils.getBotNodFilter(criteria);
-		filterByColumnMap.put("sessionId", '"' + sessionId + '"');
 		final String q = new InfluxRequestBuilder(influxDbName)
 				.range(AnalyticsServicesUtils.getTimeFilter(criteria))
-				.filterFields(AnalyticsServicesUtils.CONVERSATION_MSRMT, List.of("isUserMessage", "isBotMessage"))
-				.filterByColumn(filterByColumnMap)
-				.keep(List.of("_time", "text", "_field", "_value", "sessionId"))
-				.pivot()
+				.filterFields(AnalyticsServicesUtils.CONVERSATION_MSRMT, List.of("name"))
+				.filterByColumn(AnalyticsServicesUtils.getBotNodFilter(criteria))
+				.filterByColumn(Map.of("sessionId", '"' + sessionId + '"'))
 				.keep(List.of("_time", "text", "isUserMessage", "isBotMessage"))
 				.build(5_000L, true, "isBotMessage");
 
@@ -246,74 +219,20 @@ public class TimeSerieServices implements Component, Activeable {
 
 	public TimedDatas getConversationStats(final StatCriteria criteria, final ConversationCriteria conversationCriteria) {
 		final Map<String, String> botNodeFilterMap = AnalyticsServicesUtils.getBotNodFilter(criteria);
-		final StringBuilder query = new StringBuilder();
-		query.append("conv =  ").append(new InfluxRequestBuilder(influxDbName)
+		final var query = new InfluxRequestBuilder(influxDbName, List.of("strings"))
 				.range(AnalyticsServicesUtils.getTimeFilter(criteria))
-				.append("|> filter(fn: (r) => r._measurement == \"" + AnalyticsServicesUtils.CONVERSATION_MSRMT + "\" and r._field == \"isUserMessage\" and r._value == 1)")
-				.filter("exists r.sessionId")
+				.filter("r._measurement == \"" + AnalyticsServicesUtils.CONVERSATION_STAT_MSRMT + "\"")
 				.filterByColumn(botNodeFilterMap)
-				.keep(List.of("_time", "_field", "_value", "isUserMessage", "sessionId", "modelName"))
-				.group(List.of("sessionId")).buildRaw());
-		query.append("\n\n");
-
-		query.append("rate = ").append(new InfluxRequestBuilder(influxDbName)
-				.range(AnalyticsServicesUtils.getTimeFilter(criteria))
-				.filterFields(AnalyticsServicesUtils.RATING_MSRMT, List.of("rating"))
-				.filterByColumn(botNodeFilterMap)
-				.filter("exists r.sessionId")
-				.keep(List.of("_field", "_value", "sessionId", "rating"))
-				.group(List.of("_field")).buildRaw());
-
-		query.append("\n\n");
-
-		query.append("chatbotMessages = ").append(new InfluxRequestBuilder(influxDbName)
-				.range(AnalyticsServicesUtils.getTimeFilter(criteria))
-				.filterFields(AnalyticsServicesUtils.MESSAGES_MSRMT, List.of("name"))
-				.filterByColumn(botNodeFilterMap)
-				.filterByColumn(Map.of("name", "\"!END\""))
-				.filter("exists r.sessionId")
-				.keep(List.of("sessionId"))
-				.append("|> set(key: \"_field\", value: \"isEnded\")")
-				.append("|> set(key: \"_value\", value: \"1\")")
-				.append("|> toFloat()")
-				.group(List.of("_field")).buildRaw());
-		query.append("\n\n");
-
-		query.append("msgCount = conv \n")
-				.append("|> count() \n")
-				.append("|> set(key: \"_field\", value: \"interactions\") \n")
-				.append("|> toFloat() \n")
-				.append("|> group(columns: [\"_field\"]) \n\n");
-
-		query.append("modelName = conv \n")
-				.append("|> keep(columns: [\"modelName\", \"sessionId\"]) \n")
-				.append("|> first(column: \"modelName\") \n")
-				.append("|> group(columns: [\"_field\"]) \n")
-				.append("|> rename(columns: {modelName: \"_value\"}) \n")
-				.append("|> set(key: \"_field\", value: \"modelName\") \n\n");
-
-		query.append("sessionTime = conv").append("\n")
-				.append("|> keep(columns: [\"_time\", \"sessionId\"]) \n")
-				.append("|> rename(columns: {_time: \"_value\"}) \n")
-				.append("|> min() \n")
-				.append("|> set(key: \"_field\", value: \"_time\") \n")
-				.append("|> group(columns: [\"_field\"]) \n\n");
-
-		query.append("union(tables: [msgCount, rate, chatbotMessages, sessionTime, modelName]) \n")
-				.append("|> pivot(rowKey:[\"sessionId\"], columnKey: [\"_field\"], valueColumn: \"_value\") \n")
-				.append("|> group() \n")
-				.append("|> filter(fn: (r) => exists r._time)\n");
+				.pivot();
 		if (!conversationCriteria.getRatings().isEmpty()) {
-			query.append("|> filter(fn: (r) => ");
-			query.append(conversationCriteria.getRatings().stream().map(r -> "r.rating ==  " + r).collect(Collectors.joining(" or ")));
-			query.append(")");
+			query.filter(conversationCriteria.getRatings().stream().map(r -> "r.rating ==  \"" + r + '"').collect(Collectors.joining(" or ")));
 		}
 		if (conversationCriteria.getModelName() != null) {
-			query.append("|> filter(fn: (r) => strings.containsStr(v: r.modelName, substr: \"").append(conversationCriteria.getModelName()).append("\")) \n");
+			query.filter("strings.containsStr(v: r.modelName, substr: \"" + conversationCriteria.getModelName() + "\")");
 		}
-		query.append("|> sort(columns: [\"_time\"], desc: true)");
+		query.keep(List.of("_time", "interactions", "isEnded", "lastTopic", "rating", "ratingComment", "sessionId", "modelName"));
 
-		return InfluxRequestUtil.executeTimedQuery(influxDBClient, query.toString());
+		return InfluxRequestUtil.executeTimedQuery(influxDBClient, query.build(true));
 	}
 
 	public TimedDatas getRatingStats(final StatCriteria criteria) {
@@ -333,69 +252,6 @@ public class TimeSerieServices implements Component, Activeable {
 				.build(false);
 
 		return InfluxRequestUtil.executeTimedQuery(influxDBClient, q);
-	}
-
-	public TimedDatas getRatingDetailsStats(final StatCriteria criteria) {
-		final StringBuilder query = new StringBuilder();
-		query.append("lastTopic = ").append(new InfluxRequestBuilder(influxDbName)
-				.range(AnalyticsServicesUtils.getTimeFilter(criteria))
-				.append("|> filter(fn: (r) => r._measurement == \"" + AnalyticsServicesUtils.MESSAGES_MSRMT + "\" and r._field == \"name\" and r.isTechnical == \"0\")")
-				.filterByColumn(AnalyticsServicesUtils.getBotNodFilter(criteria))
-				.append("|> filter(fn: (r) => exists r.sessionId)")
-				.keep(List.of("_time", "name", "sessionId"))
-				.append("|> rename(columns: {name: \"_value\"})")
-				.append("|> set(key: \"_field\", value: \"lastTopic\")")
-				.group(List.of("sessionId"))
-				.append("|> sort(columns: [\"_time\"], desc:false)")
-				.append("|> last()").buildRaw());
-
-		query.append("\n\n");
-
-		query.append("time = ").append(new InfluxRequestBuilder(influxDbName)
-				.range(AnalyticsServicesUtils.getTimeFilter(criteria))
-				.append("|> filter(fn: (r) => r._measurement == \"rating\" and r._field==\"rating\" and not exists r.ratingComment)")
-				.filterByColumn(AnalyticsServicesUtils.getBotNodFilter(criteria))
-				.append("|> filter(fn: (r) => exists r.sessionId)")
-				.keep(List.of("_time", "sessionId"))
-				.append("|> duplicate(column: \"_time\", as: \"_value\")")
-				.append("|> set(key: \"_field\", value: \"_time\")")
-				.group(List.of("sessionId", "_field"))
-				.append("|> sort(columns: [\"_time\"], desc:false)")
-				.append("|> last(column: \"_time\")").buildRaw());
-
-		query.append("\n\n");
-
-		query.append("rating = ").append(new InfluxRequestBuilder(influxDbName)
-				.range(AnalyticsServicesUtils.getTimeFilter(criteria))
-				.append("|> filter(fn: (r) => r._measurement == \"rating\" and r._field==\"rating\" and not exists r.ratingComment)")
-				.filterByColumn(AnalyticsServicesUtils.getBotNodFilter(criteria))
-				.append("|> filter(fn: (r) => exists r.sessionId)")
-				.keep(List.of("_time", "_field", "_value", "sessionId"))
-				.buildRaw());
-
-		query.append("\n\n");
-
-		query.append("ratingComment = ").append(new InfluxRequestBuilder(influxDbName)
-				.range(AnalyticsServicesUtils.getTimeFilter(criteria))
-				.append("|> filter(fn: (r) => r._measurement == \"rating\" and r._field==\"rating\" and exists r.ratingComment)")
-				.filterByColumn(AnalyticsServicesUtils.getBotNodFilter(criteria))
-				.append("|> filter(fn: (r) => exists r.sessionId)")
-				.keep(List.of("_time", "_field", "sessionId", "ratingComment"))
-				.append("|> set(key: \"_field\", value: \"ratingComment\")")
-				.append("|> rename(columns: {ratingComment: \"_value\"})")
-				.buildRaw());
-
-		query.append("\n\n");
-
-		query.append("union(tables: [rating, time, ratingComment, lastTopic]) \n");
-		//query.append("union(tables: [rating, time, ratingComment]) \n"); // lastTopic désactivé pour les perfs => migrer dans le measurement des ratings
-		query.append("|> pivot(rowKey:[\"sessionId\"], columnKey: [\"_field\"], valueColumn: \"_value\") \n");
-		query.append("|> filter(fn: (r) => exists r._time and exists r.rating) \n");
-		query.append("|> group() \n");
-		query.append("|> sort(columns: [\"_time\"], desc:true)\n");
-		query.append("|> limit(n:5000)");
-
-		return InfluxRequestUtil.executeTimedQuery(influxDBClient, query.toString());
 	}
 
 	/**
